# rademacher-backtest

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  example.env  pyproject.toml
.claude/: mcp.json
.claude/agents/: postgres-pro.md  python-pro.md  research-analyst.md
examples/: 01_basic_backtest.ipynb  02_custom_portfolio.ipynb  03_ras_analysis.ipynb  04_visualization.ipynb
examples/data/: generate_sample_data.py  sample_ff.csv  sample_prices.csv  sample_rf.csv
src/rademacher_backtest/: __init__.py  api.py  cli.py
src/rademacher_backtest/analytics/: __init__.py  attribution.py  performance.py  risk.py
src/rademacher_backtest/backtest/: __init__.py  engine.py  results.py
src/rademacher_backtest/config/: __init__.py  portfolio.py  settings.py
src/rademacher_backtest/data/: __init__.py  csv_loader.py  dataframe_loader.py  loader.py  postgres_loader.py  preprocessor.py  sample_ff.csv  sample_prices.csv  sample_rf.csv  sample_treasury_rates.csv
src/rademacher_backtest/portfolio/: __init__.py  portfolio.py  rebalancer.py
src/rademacher_backtest/ras/: __init__.py  bounds.py  complexity.py  haircut.py  report.py
src/rademacher_backtest/visualization/: __init__.py  charts.py
tests/: README.md  __init__.py  conftest.py
tests/test_analytics/: test_performance.py
tests/test_backtest/: test_engine.py
tests/test_data/: test_dataframe_loader.py
tests/test_ras/: __init__.py  test_bounds.py  test_complexity.py  test_haircut.py
