[project]
name = "rademacher-backtest"
version = "1.0.0"
description = "Backtesting engine with Rademacher Anti-Serum (RAS) methodology for rigorous performance evaluation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Drew Hayes", email = "drew@example.com"}
]
keywords = [
    "backtesting",
    "finance",
    "quantitative",
    "rademacher",
    "statistics",
    "portfolio",
    "sharpe-ratio",
    "data-snooping",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]

# Core dependencies only (no database, no visualization, no CLI)
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
# Visualization support
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

# PostgreSQL database support
postgres = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
]

# CLI interface
cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

# Example notebooks
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]

# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "hypothesis>=6.100.0",
]

# Everything
all = [
    "rademacher-backtest[viz,postgres,cli,notebooks]",
]

[project.scripts]
ras-backtest = "rademacher_backtest.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/rademacher-backtest"
Documentation = "https://github.com/yourusername/rademacher-backtest#readme"
Repository = "https://github.com/yourusername/rademacher-backtest"
Issues = "https://github.com/yourusername/rademacher-backtest/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/rademacher_backtest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.basedpyright]
typeCheckingMode = "off"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=rademacher_backtest --cov-report=html"
markers = [
    "integration: integration tests requiring optional dependencies",
    "postgres: tests requiring PostgreSQL database",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
]
